/*
	The Plugins we want to define in our Gradle build
*/
apply plugin: 'java'
apply plugin: 'eclipse'

/*
	The target runtime for our JVM
*/
sourceCompatibility = 11
targetCompatibility = 11


/*
	A list of repositories we're going to be using
*/
repositories {
    mavenCentral()
}

/*
	The dependencies we're using in order to build our environment in
*/
dependencies {
	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'
	testCompileOnly 'org.projectlombok:lombok:1.18.20'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
	
	implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.2.1'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
	implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
	implementation group: 'io.netty', name: 'netty', version: '3.6.6.Final'
	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
	
	runtimeOnly group: 'org.tinylog', name: 'tinylog-impl', version: '2.4.0-M1'
	implementation group: 'org.tinylog', name: 'tinylog-api', version: '2.4.0-M1'
	implementation group: 'io.vavr', name: 'vavr', version: '0.10.4'
}

/*
	A list of all Source-built folders, list is  self-explanatory
*/
sourceSets {
    main {
        java {
            srcDirs 'fileserver'
            srcDirs 'network'
            srcDirs 'combat'
            srcDirs 'skills'
            srcDirs 'plugins'
            srcDirs 'mysql'
			srcDirs 'content'
            srcDirs 'src'
        }
    }
 }